--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="cn">
 
 <head>
     <title>Qiming's World</title>
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
-    <meta name="keywords" content="Unrivaled Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+    <meta name="keywords" content="qiming's site" />
     <script>
         addEventListener("load", function() {
             setTimeout(hideURLbar, 0);
@@ -40,95 +40,42 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </head>
 
 <body>
-
     <!-- mian-content -->
     <div class="main-banner" id="home">
-
         <!--/banner-->
         <div class="banner-info">
             <div class="w3pvt-logo text-center">
-                <h1> <a href="index.html">Qiming</a></h1>
+                <h1> <a href="index.html">Qiming's World</a></h1>
             </div>
             <div class="middile-inner-con">
                 <div class="tab-main mx-auto">
-
                     <input id="tab1" type="radio" name="tabs" class="w3layouts-sm" checked>
                     <label for="tab1"><span class="fa fa-home" aria-hidden="true"></span>Home</label>
-
                     <input id="tab2" type="radio" class="w3layouts-sm" name="tabs">
-                    <label for="tab2"><span class="fa fa-users" aria-hidden="true"></span> About</label>
-
+                    <label for="tab2"><span class="fa fa-users" aria-hidden="true"></span>Documents</label>
                     <input id="tab3" type="radio" class="w3layouts-sm" name="tabs">
                     <label for="tab3"><span class="fa fa-files-o" aria-hidden="true"></span>Projects</label>
-                    <input id="tab4" type="radio" class="w3layouts-sm" name="tabs">
-                    <label for="tab4"><span class="fa fa-envelope" aria-hidden="true"></span> Contact</label>
+<!--                    <input id="tab4" type="radio" class="w3layouts-sm" name="tabs">-->
+<!--                    <label for="tab4"><span class="fa fa-envelope" aria-hidden="true"></span>Documents</label>-->
                     <section id="content1" class="inner-w3layouts-wrap">
                         <img src="images/admin.jpg" class="admin img-fluid" alt="mobile-image">
-                        <h4>Hi I'm</h4>
-                        <h2>thisis</h2>
-                        <p>imshy</p>
-                    </section>
-                    <section id="content2" class="inner-w3layouts-wrap">
-                        <h3 class="head-w3ls">list</h3>
-                        <p>dododododododo</p>
+<!--                        <h4>Welcome</h4>-->
+                        <h4><a class="lst_link" href="https://github.com/maqiming">GitHub</a></h4>
                     </section>
                     <section id="content3" class="inner-w3layouts-wrap">
-                        <h3 class="head-w3ls">latest</h3>
+                        <h3 class="head-w3ls">to do</h3>
+                        <p>coming soon</p>
                     </section>
-                    <section id="content4" class="inner-w3layouts-wrap">
-                        <h3 class="head-w3ls"> Get In Touch</h3>
-                        <form name="contact-form" class="contact-form" method="post" action="#">
-                            <div class="row">
-                                <div class="col-6 con-gd">
-                                    <div class="form-group">
-                                        <p>Name *</p>
-                                        <input type="text" class="form-control" id="name" placeholder="" name="name" required="">
-                                    </div>
-                                    <div class="form-group">
-                                        <p>Email *</p>
-                                        <input type="email" class="form-control" id="email" placeholder="" name="email" required="">
-                                    </div>
-
-                                </div>
-                                <div class="col-6 con-gd">
-                                    <div class="form-group">
-                                        <p>Send a Message *</p>
-                                        <textarea name="Message" placeholder="" required=""></textarea>
-                                    </div>
-
-                                </div>
-
-                            </div>
-                            <div class="form-group">
-
-                                <button type="submit" class="btn btn-default">Submit</button>
-                            </div>
-
-                        </form>
-                        <ul class="w3pvt_social_list list-unstyled mt-4">
-                            <li>
-                                <a href="#" class="w3layouts-icon">
-                                    <span class="fa fa-facebook-f"></span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="w3layouts-icon">
-                                    <span class="fa fa-twitter"></span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="w3layouts-icon">
-                                    <span class="fa fa-dribbble"></span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="w3layouts-icon">
-                                    <span class="fa fa-google-plus"></span>
-                                </a>
-                            </li>
+                    <section id="content2" class="inner-w3layouts-wrap">
+                        <ul>
+                            <li><a class="lst_link" href="https://github.com/maqiming/py4data/master/doc/000_centos.md">000-CentOS环境准备</a></li>
+                            <li><a class="lst_link" href="https://github.com/maqiming/py4data/master/doc/001_full_install.md">001-大数据环境安装</a></li>
+                            <li><a class="lst_link" href="https://github.com/maqiming/py4data/master/doc/001_lite_install.md">002-PySpark环境安装-local</a></li>
+                            <li><a class="lst_link" href="https://github.com/maqiming/py4data/master/doc/pyspark_vs_pandas_vs_modin.md">003-PySpark-vs-Pandas-vs-Modin</a></li>
+                            <li><a class="lst_link" href="https://github.com/maqiming/py4data/master/doc/004_kylin_install.md">004-Kylin环境安装</a></li>
+                            <li><a class="lst_link" href="https://github.com/maqiming/py4data/master/doc/005_airflow_install.md">005-Airflow环境安装</a></li>
                         </ul>
                     </section>
-
                 </div>
                 <!--// banner-inner -->
             </div>
