--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- Style-CSS -->
     <!-- font-awesome-icons -->
     <link href="css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://www.eleraptor.com/zb_users/theme/filmlee/template/live2D/waifu.css"/>
     <!-- //font-awesome-icons -->
     <!-- /Fonts -->
     <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900" rel="stylesheet">
@@ -61,6 +62,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <img src="images/admin.jpg" class="admin img-fluid" alt="mobile-image">
 <!--                        <h4>Welcome</h4>-->
                         <h4><a class="lst_link" href="https://github.com/maqiming">GitHub</a></h4>
+                        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=531786602&auto=0&height=66"></iframe>
                     </section>
                     <section id="content3" class="inner-w3layouts-wrap">
                         <h3 class="head-w3ls">to do</h3>
@@ -82,6 +84,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </div>
     </div>
     <!--//main-content-->
+
+<script type="text/javascript" charset="utf-8"  src="https://files.cnblogs.com/files/liuzhou1/L2Dwidget.0.min.js"></script>
+<script type="text/javascript" charset="utf-8"  src="https://files.cnblogs.com/files/liuzhou1/L2Dwidget.min.js"></script>
+<script type="text/javascript">
+    L2Dwidget.init({"display": {
+        "superSample": 2,
+        "width": 200,
+        "height": 400,
+             "position": "right",
+                 "hOffset": 0,
+        "vOffset": 0
+          }
+     });
+</script>
+
+
 
 
 </body>
