--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="cn">
 
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?bb1a4de82e3332e4b957c7d83b3f7095";
+  var s = document.getElementsByTagName("script")[0];
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 <head>
     <title>Qiming's World</title>
     <!-- Meta tag Keywords -->
@@ -37,7 +47,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800" rel="stylesheet">
     <!-- //Fonts -->
-
+    <link rel="stylesheet" href="/live2d/css/live2d.css" />
 </head>
 
 <body>
@@ -96,7 +106,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 　　"hOffset": 0, "vOffset": -20 }, "mobile": { "show": true, "scale": 0.5 },
 　　"react": { "opacityDefault": 0.7, "opacityOnHover": 0.2 } });
 </script>
-
 
 
 </body>
