--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ var _hmt = _hmt || [];
 			<nav>
 				<ul>
 					<li><a href="#intro">Intro</a></li>
-					<li><a href="#work">Work</a></li>
-					<li><a href="#about">About</a></li>
+					<li><a href="#work">Article</a></li>
+					<li><a href="#about">Project</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -57,7 +57,11 @@ var _hmt = _hmt || [];
 				<article id="work">
 					<h2 class="major">Article</h2>
 					<span class="image main"></span>
-					<p>这里是文章列表</p>
+					<ul>
+						<li><a href="article/0000-CentOS环境准备.html">0000-CentOS环境准备</a></li>
+						<li><a href="article/1000-hadoop+spark环境安装.html">1000-hadoop+spark环境安装</a></li>
+						<li><a href="article/1001-PySpark_Pandas,_Modin运算对比.html">1001-PySpark_Pandas,_Modin运算对比</a></li>
+					</ul>
 				</article>
 
 			<!-- About -->
