--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@ var _hmt = _hmt || [];
 				<article id="intro">
 					<h2 class="major">Intro</h2>
 					<span class="image main"></span>
-					<p>Welcome to Qiming's World </p>
+					<p>Welcome to Qiming's World <br> 编号规则：</p>
+					<ul>
+						<li>第一位数: 技术线, 0->基础类, 1->Spark技术</li>
+						<li>第二位数: 二级分类, 0->概述, 1->环境与初始化, 2->Demo</li>
+						<li>第三/四位数: 具体序号</li>
+					</ul>
 				</article>
 
 			<!-- Work -->
@@ -59,8 +64,8 @@ var _hmt = _hmt || [];
 					<span class="image main"></span>
 					<ul>
 						<li><a href="article/0000-CentOS环境准备.html">0000-CentOS环境准备</a></li>
-						<li><a href="article/1000-hadoop+spark环境安装.html">1000-hadoop+spark环境安装</a></li>
-						<li><a href="article/1001-PySpark_Pandas,_Modin运算对比.html">1001-PySpark_Pandas,_Modin运算对比</a></li>
+						<li><a href="article/1101-hadoop+spark环境安装.html">1101-hadoop+spark环境安装</a></li>
+						<li><a href="article/1201-PySpark_Pandas,_Modin运算对比.html">1201-PySpark_Pandas,_Modin运算对比</a></li>
 					</ul>
 				</article>
 
