--- a/index.html
+++ b/index.html
@@ -50,23 +50,29 @@ var _hmt = _hmt || [];
 				<article id="intro">
 					<h2 class="major">Intro</h2>
 					<span class="image main"></span>
-					<p>Welcome to Qiming's World <br> 编号规则：</p>
-					<ul>
-						<li>第一位数: 表示技术线, 0->基础类, 1->Python&Pandas基础, 2->Spark in Python, 3->Python in ETL, 4->Python in ML, P->综合项目</li>
-						<li>第二位数: 表示二级分类, 0->概述, 1->环境与初始化, 2->Demo</li>
-						<li>第三/四位数: 表示具体序号</li>
-					</ul>
+						<div><h4><span>编号规则</span></h4>
+							<ul>
+								<li><p><span>第一位数: 表示技术线</span></p>
+									<ul>
+										<li><span>0 : 基础类, 1 : Python&amp;Pandas基础,  2 : Spark in Python, 3 : Python in ETL, 4 : Python in ML, P : 综合项目</span>
+										</li>
+									</ul>
+								</li>
+								<li><p><span>第二位数: 表示二级分类</span></p>
+									<ul>
+										<li><span>0 : 概述, 1 : 环境与初始化, 2 : Demo</span></li>
+									</ul>
+								</li>
+								<li><p><span>第三/四位数: 表示具体序号</span></p></li>
+							</ul>
+						</div>
 				</article>
 
 			<!-- Work -->
 				<article id="work">
 					<h2 class="major">Article</h2>
 					<span class="image main"></span>
-					<ul>
-						<li><a href="article/0000-CentOS环境准备.html">0000-CentOS环境准备</a></li>
-						<li><a href="article/2101-hadoop+spark环境安装.html">2101-hadoop+spark环境安装</a></li>
-						<li><a href="article/2201-PySpark_Pandas,_Modin运算对比.html">2201-PySpark_Pandas,_Modin运算对比</a></li>
-					</ul>
+					<iframe src="pages.html" width="600" height="400"></iframe>
 				</article>
 
 			<!-- About -->
